force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/G2Crowd__G2_Review_Answer__c.object-meta.xml
<CustomObject>
    <label>G2 Review Answer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Review Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>