force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>