force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__Comment__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>