force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__G2_Review__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Review__c</fullName>
    <label>G2 Review</label>
    <referenceTo>G2Crowd__G2_Review__c</referenceTo>
    <relationshipLabel>G2 Review Answers</relationshipLabel>
    <relationshipName>G2_Review_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>