force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__Question__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Question__c</fullName>
    <label>Question</label>
    <length>150</length>
    <type>Text</type>
</CustomField>