force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__Question_Type__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>categories</fullName>
            </value>
            <value>
                <fullName>comment</fullName>
            </value>
            <value>
                <fullName>dropdown</fullName>
            </value>
            <value>
                <fullName>employment_position</fullName>
            </value>
            <value>
                <fullName>endorsements</fullName>
            </value>
            <value>
                <fullName>feature</fullName>
            </value>
            <value>
                <fullName>product_search</fullName>
            </value>
            <value>
                <fullName>simple_7</fullName>
            </value>
            <value>
                <fullName>slider_nps</fullName>
            </value>
            <value>
                <fullName>text_field</fullName>
            </value>
            <value>
                <fullName>upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>