force-app/main/default/objects/G2Crowd__G2_Review_Answer__c/fields/G2Crowd__Value__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>